server/.happypack/s--1054198342
SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/store/configureStore.js: Unexpected token, expected , (10:14)

[0m [90m  8 | [39m[36mconst[39m createStoreWithMiddleware [33m=[39m createStore(rootReducer[33m,[39m composeEnhancers(
 [90m  9 | [39m  applyMiddleware(thunkMiddleware)
[31m[1m>[22m[39m[90m 10 | [39m)(createStore)[33m;[39m
 [90m    | [39m              [31m[1m^[22m[39m
 [90m 11 | [39m
 [90m 12 | [39m[36mexport[39m [36mdefault[39m [36mfunction[39m configureStore(initialState) {
 [90m 13 | [39m    [36mreturn[39m createStoreWithMiddleware(rootReducer[33m,[39m initialState)[33m;[39m[0m

BabelLoaderError: SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/store/configureStore.js: Unexpected token, expected , (10:14)

[0m [90m  8 | [39m[36mconst[39m createStoreWithMiddleware [33m=[39m createStore(rootReducer[33m,[39m composeEnhancers(
 [90m  9 | [39m  applyMiddleware(thunkMiddleware)
[31m[1m>[22m[39m[90m 10 | [39m)(createStore)[33m;[39m
 [90m    | [39m              [31m[1m^[22m[39m
 [90m 11 | [39m
 [90m 12 | [39m[36mexport[39m [36mdefault[39m [36mfunction[39m configureStore(initialState) {
 [90m 13 | [39m    [36mreturn[39m createStoreWithMiddleware(rootReducer[33m,[39m initialState)[33m;[39m[0m

    at transpile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:63:13)
    at Object.module.exports (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:163:20)
    at applySyncOrAsync (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:116:3)